// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> component should render correctly card with image 1`] = `
<div
  className="card"
>
  <div
    className="card-image"
  >
    <figure
      className="image is-4by3"
    >
      <img
        alt="Placeholder image"
        src="https://bulma.io/images/placeholders/1280x960.png"
      />
    </figure>
  </div>
  <div
    className="card-content"
  >
    <div
      className="media"
    >
      <div
        className="media-left"
      >
        <figure
          className="image is-48x48"
        >
          <img
            alt="Placeholder image"
            src="https://bulma.io/images/placeholders/96x96.png"
          />
        </figure>
      </div>
      <div
        className="media-content"
      >
        <p
          className="title is-4"
        >
          John Smith
        </p>
        <p
          className="subtitle is-6"
        >
          @johnsmith
        </p>
      </div>
    </div>
    <div
      className="content"
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. @bulmaio. #css #responsive
      </p>
      <time
        dateTime="2016-1-1"
      >
        11:09 PM - 1 Jan 2016
      </time>
    </div>
  </div>
</div>
`;

exports[`<Card /> component should render correctly card with title 1`] = `
<div
  className="card"
>
  <header
    className="card-header"
  >
    <p
      className="card-header-title"
    >
      Component
    </p>
    <a
      className="card-header-icon"
      type="button"
    >
      x
    </a>
  </header>
  <div
    className="card-content"
  >
    <div
      className="content"
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. @bulmaio. #css #responsive
      </p>
      <time
        dateTime="2016-1-1"
      >
        11:09 PM - 1 Jan 2016
      </time>
    </div>
  </div>
  <footer
    className="card-footer"
  >
    <p
      className="card-footer-item"
      type="button"
    >
      Save
    </p>
    <p
      className="card-footer-item"
      type="button"
    >
      Edit
    </p>
    <p
      className="card-footer-item"
      type="button"
    >
      Delete
    </p>
  </footer>
</div>
`;

exports[`<Card /> component should render correctly card with title centered 1`] = `
<div
  className="card"
>
  <header
    className="card-header"
  >
    <p
      className="card-header-title is-centered"
    >
      Component
    </p>
  </header>
  <div
    className="card-content"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. @bulmaio. #css #responsive
    </p>
  </div>
</div>
`;
